style: fixed counter z-index

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -8,6 +8,8 @@ header {
     @include flex-justify-align(space-between, center);
     position: fixed;
     width: 100%;
+    z-index: 999;
+
     
 
     .header{
