--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -108,6 +108,7 @@
             span {
                 font-size: 1.2rem;
                 padding: 20px 0px;
+                z-index: -2;
             }
 
             
